Trying to fix the issue on safari again

--- a/api/static/css/zudoku.scss
+++ b/api/static/css/zudoku.scss
@@ -523,22 +523,29 @@ label {
 
     .button-grid {
         display: flex;
-        flex-wrap: wrap; 
-        gap: none; 
-        max-width: 90vw; 
-        width: 100%; 
-        justify-content: space-between; 
+        align-items: center;
+        gap: 0; 
+        // max-width: 90vw; 
+        // width: 100%; 
+        // justify-content: espace-between; 
     }
     
     .number_button {
-        flex: 1 0 10%; 
-        max-width: 10%; 
-        max-height: 40px;
+        // flex: 1 0 10%; 
+        // max-width: 10%; 
+        // max-height: 40px;
 
 
         border: none !important;
-        font-size: 3vw; 
         transition: background-color 0.5s; 
+
+
+        width: 10px;
+        height: 10px;
+        font-family: 'Caveat', cursive;
+        font-size: 1vw;
+        cursor: pointer;
+        transition: background-color 0.5s;
 
         // .number_button_content {
         //     transition: transform 0.5s;
